- Controllers   * called library report system and made new method     xls_workstation
- Helpers
  * refactoring of advice method

- Partials and views
  * little changes in partials and views

- Routes
  * added route to match report workstations

- Lib
  * added new methods to generate a xls file

- Css
  * little changes

--- a/app/views/computers/_form.html.erb
+++ b/app/views/computers/_form.html.erb
@@ -1,4 +1,5 @@
-<%= advice( @computer.is_part_of_a_workstation, t('help-phrases.in-workstation'))%>
+<%= advice( @computer.is_part_of_a_workstation,t('common-actions.hide-advice'),
+ t('help-phrases.in-workstation'))%>
 
 <% form_for(@computer) do |f| %>
 <%= f.error_messages %>
