--- a/app/views/workstations/_list.html.erb
+++ b/app/views/workstations/_list.html.erb
@@ -1,3 +1,8 @@
+<div id='right-content' >
+  <%= link_to t('common-actions.download'), :controller => 'workstations',
+  :action => 'xls_workstations' %>
+</div>
+
 <% if not @workstations.empty? %>
 <table>
   <tr>
