--- a/app/views/workstations/_places_selector.html.erb
+++ b/app/views/workstations/_places_selector.html.erb
@@ -1,5 +1,9 @@
 <%= javascript_include_tag "prototype" %>
-<%= t('workstations.place') %>
+
+<div id='subtitles' >
+  <%= t('workstations.place') %>
+</div>
+
 <select name="places" id="places">
   <option value=""><%= t('workstations.select_a_place') %></option>
   <% @places.each do |place| %>
