--- a/app/views/screens/_form.html.erb
+++ b/app/views/screens/_form.html.erb
@@ -1,4 +1,5 @@
-<%= advice( @screen.is_part_of_a_workstation, t('help-phrases.in-workstation'))%>
+<%= advice( @screen.is_part_of_a_workstation, t('common-actions.hide-advice'),
+t('help-phrases.in-workstation'))%>
 
 <% form_for(@screen) do |f| %>
   <%= f.error_messages %>
