--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -342,6 +342,15 @@ table
     border-bottom: solid 1px #000;
 }
 
+#description
+{
+    background-color: #F5FBEF;
+    text-align: left;
+    padding: 0.1em;
+    color: #000;
+    border-bottom: solid 1px #000;
+}
+
 #right-content
 {
     float: right;
@@ -441,13 +450,8 @@ div.auto_complete ul strong.highlight {
 
 #stats_data
 {
-    margin: 0em 30em 0em 0em;
-    background-color: #f0f0f0;
+    margin: 0em 30em 0em 3em;
     color: #000;
-    border-top: solid 1px #BBBBBB;
-    border-left: solid 1px #000000;
-    border-right: solid 1px #DDD;
-    border-bottom: solid 1px #DDD;
 }
 
 
