--- a/app/views/workstations/index.html.erb
+++ b/app/views/workstations/index.html.erb
@@ -1,3 +1,8 @@
+<div id='right-content' >
+  <%= link_to t('common-actions.download'), :controller => 'workstations',
+  :action => 'xls_workstations' %>
+</div>
+
 <%= render :partial => 'list' %>
 
 <br />
