- Partial   * added tranlation in menu partial
- Locales
  * added new translation in english and spanish

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -66,16 +66,16 @@
               <li><a href="/memories/new"><%= t 'menu.new-memorie' %></a></li>
             </ul>
           </li>
-          <li><a href="/cds" class="fly">Cds</a>
+          <li><a href="/cds" class="fly"><%= t 'menu.cds' %></a>
             <ul>
-              <li><a href="/cds">List</a></li>
-              <li><a href="/cds/new">New</a></li>
+              <li><a href="/cds"><%= t 'menu.list-cds' %></a></li>
+              <li><a href="/cds/new"><%= t 'menu.new-cd' %></a></li>
             </ul>
           </li>
-          <li><a href="/dvds" class="fly">Dvs</a>
+          <li><a href="/dvds" class="fly"><%= t 'menu.dvds' %></a>
             <ul>
-              <li><a href="/dvds">List</a></li>
-              <li><a href="/dvds/new">New</a></li>
+              <li><a href="/dvds"><%= t 'menu.list-dvds' %></a></li>
+              <li><a href="/dvds/new"><%= t 'menu.new-dvd' %></a></li>
             </ul>
           </li>
           <li><a href="/screens" class="fly"><%= t 'menu.screens' %></a>
