- Partials   * added translation
- Locales
  * new translations

--- a/app/views/cds/_list.html.erb
+++ b/app/views/cds/_list.html.erb
@@ -2,7 +2,7 @@
   <tr>
     <th><%= t('cds.model') %></th>
     <th><%= t('cds.sn') %></th>
-    <th>Burn</th>
+    <th><%= t('cds.burn') %></th>
     <th>Pc</th>
     <th><%= t('cds.mark') %></th>
     <th colspan='3'><%= t('common-actions.actions') %></t>
