--- a/app/views/dvds/_list.html.erb
+++ b/app/views/dvds/_list.html.erb
@@ -2,7 +2,7 @@
   <tr>
     <th><%= t('dvds.model') %></th>
     <th><%= t('dvds.sn') %></th>
-    <th>Burn</th>
+    <th><%= t('dvds.burn') %></th>
     <th>Pc</th>
     <th><%= t('dvds.mark') %></th>
     <th colspan='3'><%= t('common-actions.actions') %></th>
