- Helper   * added new method to check if something has true or false     value
- Partials
  * adapted to new method check

- Locales
  * fixed translation in english

--- a/app/views/cds/_list.html.erb
+++ b/app/views/cds/_list.html.erb
@@ -11,7 +11,7 @@
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= cd.model %></td>
     <td><%= cd.serialnumber %></td>
-    <td><%= cd.writable %></td>
+    <td><%= check(cd.writable) %></td>
     <td><%= cd.computer.name rescue nil  %></td>
     <td><%= cd.mark.name rescue nil  %></td>
     <td><%= link_to t('common-actions.show'), cd %></td>
