--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -402,6 +402,26 @@ table
     float: right;
 }
 
+#principal-device
+{
+    background-color: #fff;
+    width: 25%;
+    color: #000;
+    padding: 1em 1em 0.5em 1em;
+    font-size: 12pt;
+}
+
+#data-principal-device
+{
+    background-color: #F7F8E0;
+    width: 15%;
+    color: #000;
+    float: left;
+    padding: 0.1em 0em 0.1em 0em;
+    margin:0px 0px 1px 40px;
+    font-size: 10pt;
+}
+
 /* Footer */
 
 #footer
