- Controllers   * added edit method in users controller   * added two private methods, load_user and logged_in
- Helpers
  * added method is_admin? to check the user level

- Partials
  * added options to edit user account and generate
    a new account

- Views
  * changes in new and edit views for users

- Locales
  * added translations

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Sign up as a new user</h1>
+<% if is_admin? %>
+
+<h6>Sign up as a new user</h6>
 <% @user.password = @user.password_confirmation = nil %>
 
 <%= error_messages_for :user %>
@@ -19,4 +21,6 @@
 <%= f.select :language, [['English','en'], ['Spanish','es']] %></p>
 
 <p><%= submit_tag 'Sign up' %></p>
+<% end -%>
+
 <% end -%>
