--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -106,6 +106,19 @@
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
 
+
+      <li class="top">
+        <a href="/users/<%= current_user.id %>/edit" id="telmex" class="top_link">
+          <span class="down"><%= t 'menu.account' %></span>
+          <!--[if gte IE 7]><!--></a><!--<![endif]-->
+        <!--[if lte IE 6]><table><tr><td><![endif]-->
+        <ul class="sub">
+          <li><a href="/users/<%= current_user.id %>/edit"><%= t 'menu.account-edit' %></a></li>
+          <li><a href="/signup"><%= t 'menu.new-account' %></a></li>
+        </ul>
+        <!--[if lte IE 6]></td></tr></table></a><![endif]-->
+      </li>
+
       <li class="top">
         <a href="/logout" id="telmex" class="top_link">
           <span class="down"><%= t 'menu.logout' %></span>
