--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
 <% form_for(@user) do |f| %>
-   <% if current_user.login == 'admin' %>
+
+   <% if current_user.id == @user.id %>
     <p><label for="email">Email</label><br/>
     <%= f.text_field :email %></p>
     <p><label for="password">Password</label><br/>
