--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -539,10 +539,10 @@ div.auto_complete ul strong.highlight {
 .menu2 :hover ul.sub {left:6px; top:25px; padding:0; border:1px solid #000; white-space:nowrap; width:auto; height:auto; font-weight:normal;background:url(../images/a1.gif) repeat-x;}
 .menu2 :hover ul.sub li {display:block; /*height:20px; */position:relative; float:left; width:160px; border-bottom:1px solid #000000; border-left:1px solid #000000; border-right:1px solid #000000; margin-bottom:0;}
 .menu2 :hover ul.sub li a {display:block; height:auto; font-size:11px; padding:4px 3px; line-height:1; color:#000000; text-decoration:none;}
-.menu2 :hover ul.sub li a.fly {background: #CA2F2F url('../images/n3.gif') repeat-x;}
+.menu2 :hover ul.sub li a.fly {background: #fff;}
 .menu2 :hover ul.sub li a:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#FFFFFF;}
-.menu2 :hover ul.sub li a.fly:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#FFFFFF;}
-.menu2 :hover ul li:hover > a.fly {background: #CA2F2F url('../images/n3.gif') repeat-x;}
+.menu2 :hover ul.sub li a.fly:hover {color:#FFFFFF;}
+.menu2 :hover ul li:hover > a.fly {}
 
 .menu2 :hover ul :hover ul,
 .menu2 :hover ul :hover ul :hover ul,
