--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -16,6 +16,8 @@ body,input
     font-family: tahoma, sans-serif;
     font-size: 10pt;
     color: #000;
+    border: 1px solid #626262;
+    background: #FEFEFE url(../images/img13.gif) repeat-x;
 }
 
 input.button
@@ -28,7 +30,6 @@ input.button
     color: #555;
     font-size: 0.8em;
     padding: 0.35em;
-    background-color: #000000;
 }
 
 input.text
@@ -45,18 +46,18 @@ input.text
 
 a
 {
-    color: #006699;
-    text-decoration: none;
+text-decoration: none;
+color: #D90000;
 }
 
 a:hover
 {
-    text-decoration: none;
+text-decoration: none;
 }
 
 a:visited
 {
-    color: #006699;
+    color: #D90000;
 }
 
 td
@@ -70,6 +71,9 @@ select
     font-size: 9pt;
     background-color: #fff;
     width: 100%;
+    color: #555;
+    font-size: 0.8em;
+    padding: 0.15em;
 }
 
 form
@@ -134,6 +138,7 @@ table
     background-color: #558800;
     border-bottom: solid 1px #336600;
     width: 100%;
+    background:url(../images/n1.gif) repeat-x;
 }
 
 /* Content */
@@ -202,9 +207,9 @@ table
 {
     margin-top: 1em;
     color: #fff;
-    border-bottom: solid 1px #004466;
-    background: #669933;
     padding: 0em 0em 0em 0em;
+    background: #ffffff url('../images/n2.gif') top left repeat-x;
+
 }
 
 .boxB span
@@ -504,12 +509,12 @@ div.auto_complete ul strong.highlight {
 .menu2 li a.top_link {display:block; float:right; height:25px; margin-left:6px; line-height:25px; color:#FFF;
  text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 6px; cursor:pointer;}
 .menu2 li a.top_link span {float:left; display:block; padding:0 10px 0 6px; height:40px;}
-.menu2 li a.top_link span.down {float:left; display:block; padding:0 10px 0 6px; height:25px;/*background:url(prodrop2/down.gif) no-repeat right top;*/}
-.menu2 li a.top_link:hover {color: #FFF;}
+.menu2 li a.top_link span.down {float:left; display:block; padding:0 10px 0 6px; height:25px;}
+.menu2 li a.top_link:hover {color: #FFF;background: #CA2F2F url('../images/n3.gif') repeat-x;}
 .menu2 li a.top_link:hover
 .menu2 li a.top_link:hover
 
-.menu2 li:hover > a.top_link {color:#555}
+.menu2 li:hover > a.top_link {color:#555;}
 .menu2 li:hover > a.top_link
 .menu2 li:hover > a.top_link
 
@@ -530,19 +535,19 @@ div.auto_complete ul strong.highlight {
 .menu2 :hover ul :hover ul :hover ul ul,
 .menu2 :hover ul :hover ul :hover ul :hover ul ul {position:absolute; left:-9999px; top:-9999px; width:0; height:0; margin:0; padding:0; list-style:none;}
 
-.menu2 :hover ul.sub {left:6px; top:25px; background: #fff; padding:0; /*border:1px solid #1E8BB5; white-space:nowrap;*/ width:auto; height:auto; font-weight:normal;}
+.menu2 :hover ul.sub {left:6px; top:25px; padding:0; border:1px solid #000; white-space:nowrap; width:auto; height:auto; font-weight:normal;background:url(../images/a1.gif) repeat-x;}
 .menu2 :hover ul.sub li {display:block; /*height:20px; */position:relative; float:left; width:160px; border-bottom:1px solid #000000; border-left:1px solid #000000; border-right:1px solid #000000; margin-bottom:0;}
 .menu2 :hover ul.sub li a {display:block; height:auto; font-size:11px; padding:4px 3px; line-height:1; color:#000000; text-decoration:none;}
-.menu2 :hover ul.sub li a.fly {background:#fff;}
-.menu2 :hover ul.sub li a:hover {background:#000000; color:#FFFFFF;}
-.menu2 :hover ul.sub li a.fly:hover {background:#000000; color:#FFFFFF;}
-.menu2 :hover ul li:hover > a.fly {background:white}
+.menu2 :hover ul.sub li a.fly {background: #CA2F2F url('../images/n3.gif') repeat-x;}
+.menu2 :hover ul.sub li a:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#FFFFFF;}
+.menu2 :hover ul.sub li a.fly:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#FFFFFF;}
+.menu2 :hover ul li:hover > a.fly {background: #CA2F2F url('../images/n3.gif') repeat-x;}
 
 .menu2 :hover ul :hover ul,
 .menu2 :hover ul :hover ul :hover ul,
 .menu2 :hover ul :hover ul :hover ul :hover ul,
 .menu2 :hover ul :hover ul :hover ul :hover ul :hover ul
 {left:160px; top:-1px; background: #fff; padding:0; /* white-space:nowrap; */width:auto; z-index:300; height:auto;}
-.menu2 :hover ul.sub li ul {border-top:1px solid #000000; background: #fff; z-index:300;}
+.menu2 :hover ul.sub li ul {border-top:1px solid #000; background: #fff; z-index:300;}
 
 
