- Css   * little changes
- Partial
  * little changes

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -305,19 +305,20 @@ table
     font-weight: bold;
     padding: 0.1em;
     color: #000;
-    background-color: #DDDDDD;
+    background:  url(../images/a1.gif) repeat-x;
     border-bottom: solid 1px #000;
     width: 100%;
 }
 
 #content table td
 {
+    font-size: 12px;
+    text-align: left;
     padding: 0.1em;
 }
 
 #content table tr.rowA
 {
-    background-color: #efefef;
     color: inherit;
 }
 
