--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -4,7 +4,7 @@
   <%= link_to t('common-actions.download'), :controller => 'places',
   :action => 'xls_places' %>
 </div>
-<div id='toggle_appear_table_list_places' style='background:#eee;' >
+<div id='toggle_appear_table_list_places' >
   <div>
     <h2><%= t('phrases.list_of') + t('menu.places') %></h2>
     <table>
