- Controllers   * added new method list in users controllers
- Partials
  * added new menu option for list of users
  * added list partial users

- Views
  * refactoring and changes in edit users
  * new view to show list of users
  * added some lines in users new

- Routes
  * added route for users list

- Locales
  * new translations in english and spanish locales

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -106,6 +106,17 @@
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
 
+      <li class="top">
+        <a href="#" id="telmex" class="top_link">
+          <span class="down"><%= t 'menu.users' %></span>
+          <!--[if gte IE 7]><!--></a><!--<![endif]-->
+        <!--[if lte IE 6]><table><tr><td><![endif]-->
+        <ul class="sub">
+          <li><a href="/users/list"><%= t 'menu.users-list' %></a></li>
+          <li><a href="/signup"><%= t 'menu.new-account' %></a></li>
+        </ul>
+        <!--[if lte IE 6]></td></tr></table></a><![endif]-->
+      </li>
 
       <li class="top">
         <a href="/users/<%= current_user.id %>/edit" id="telmex" class="top_link">
@@ -114,7 +125,6 @@
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
           <li><a href="/users/<%= current_user.id %>/edit"><%= t 'menu.account-edit' %></a></li>
-          <li><a href="/signup"><%= t 'menu.new-account' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
