--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -509,7 +509,7 @@ body {
         margin:10px 0;
         padding:0px;
         text-align:left;
-        padding: 1.0em 0.5em 0em 2em;
+        padding: 1.0em 5.5em 0em 2em;
         }
 
 .preload2
@@ -547,9 +547,9 @@ body {
 .menu2 :hover ul.sub li {display:block; /*height:20px; */position:relative; float:left; width:160px; border-bottom:1px solid #000; border-left:1px solid #000; border-right:1px solid #000; margin-bottom:0;}
 .menu2 :hover ul.sub li a {display:block; height:auto; font-size:11px; padding:4px 3px; line-height:1; color:#000; text-decoration:none;}
 .menu2 :hover ul.sub li a.fly {background:#fff}
-.menu2 :hover ul.sub li a:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:yellow;font-size: 15px;font-weight: bold;}
-.menu2 :hover ul.sub li a.fly:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:yellow;font-size: 15px; font-weight: bold;}
-.menu2 :hover ul li:hover > a.fly {background: #CA2F2F url('../images/n3.gif') repeat-x; color:yellow;}
+.menu2 :hover ul.sub li a:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#fff;font-size: 15px;font-weight: bold;}
+.menu2 :hover ul.sub li a.fly:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#fff;font-size: 15px; font-weight: bold;}
+.menu2 :hover ul li:hover > a.fly {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#fff;}
 
 .menu2 :hover ul :hover ul,
 .menu2 :hover ul :hover ul :hover ul,
