- Controllers   * changed create method to don't go logged in with a new     user account when it is created
- Views
  * the admin account can not change its admin status

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,7 +18,8 @@
     </div>
    <% end %>
 
-   <% if is_admin? %>
+
+   <% if is_admin? && @user.login != 'admin' %>
    <div id='quarter'>
      <p>
        <%= f.label :is_admin %><br />
