- Helpers   * added method is_an_admin_user?
- Partial
  * control if the user is an admin user

- View
  * control if the user is an admin user

--- a/app/views/users/list.html.erb
+++ b/app/views/users/list.html.erb
@@ -1,1 +1,5 @@
-<%= render :partial => 'list' %>
+<% if logged_in? %>
+  <% if is_an_admin_user? %>
+    <%= render :partial => 'list' %>
+  <% end %>
+<% end %>
