--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -106,6 +106,7 @@
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
 
+      <% if is_an_admin_user? %>
       <li class="top">
         <a href="#" id="telmex" class="top_link">
           <span class="down"><%= t 'menu.users' %></span>
@@ -117,6 +118,7 @@
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
+      <% end %>
 
       <li class="top">
         <a href="/users/<%= current_user.id %>/edit" id="telmex" class="top_link">
