--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,35 +1,37 @@
-<% if current_user.is_admin? %>
+<% if logged_in? %>
+ <% if current_user.is_admin? %>
 
-<h4>Sign up as a new user</h4>
-<% @user.password = @user.password_confirmation = nil %>
+  <h4>Sign up as a new user</h4>
+  <% @user.password = @user.password_confirmation = nil %>
 
-<%= error_messages_for :user %>
-<% form_for :user, :url => users_path do |f| -%>
-<p><%= label_tag 'login' %><br/>
-<%= f.text_field :login %></p>
+  <%= error_messages_for :user %>
+  <% form_for :user, :url => users_path do |f| -%>
+  <p><%= label_tag 'login' %><br/>
+  <%= f.text_field :login %></p>
 
-<p><%= label_tag 'email' %><br/>
-<%= f.text_field :email %></p>
+  <p><%= label_tag 'email' %><br/>
+  <%= f.text_field :email %></p>
 
-<p><%= label_tag 'password' %><br/>
-<%= f.password_field :password %></p>
+  <p><%= label_tag 'password' %><br/>
+  <%= f.password_field :password %></p>
 
-<p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
-<%= f.password_field :password_confirmation %></p>
+  <p><%= label_tag 'password_confirmation', 'Confirm Password' %><br/>
+  <%= f.password_field :password_confirmation %></p>
 
-<div id='quarter'>
-  <%= label_tag 'language', 'Language' %>
-  <%= f.select :language, [['English','en'], ['Spanish','es']] %>
+  <div id='quarter'>
+    <%= label_tag 'language', 'Language' %>
+    <%= f.select :language, [['English','en'], ['Spanish','es']] %>
 
-  <div class='clear'></div>
+    <div class='clear'></div>
 
-  <p>
-    <%= f.label :is_admin %><br />
-    <%= f.check_box :is_admin %>
-  </p>
-</div>
+    <p>
+      <%= f.label :is_admin %><br />
+      <%= f.check_box :is_admin %>
+    </p>
+  </div>
 
-<p><%= submit_tag 'Sign up' %></p>
+  <p><%= submit_tag 'Sign up' %></p>
+ <% end -%>
+
 <% end -%>
-
 <% end -%>
