--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -556,8 +556,8 @@ body {
 .menu2 :hover ul.sub li {display:block; /*height:20px; */position:relative; float:left; width:160px; border-bottom:1px solid #000; border-left:1px solid #000; border-right:1px solid #000; margin-bottom:0;}
 .menu2 :hover ul.sub li a {display:block; height:auto; font-size:11px; padding:4px 3px; line-height:1; color:#000; text-decoration:none;}
 .menu2 :hover ul.sub li a.fly {background:#fff}
-.menu2 :hover ul.sub li a:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#fff;font-size: 15px;font-weight: bold;}
-.menu2 :hover ul.sub li a.fly:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#fff;font-size: 15px; font-weight: bold;}
+.menu2 :hover ul.sub li a:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#fff;}
+.menu2 :hover ul.sub li a.fly:hover {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#fff;}
 .menu2 :hover ul li:hover > a.fly {background: #CA2F2F url('../images/n3.gif') repeat-x; color:#fff;}
 
 .menu2 :hover ul :hover ul,
@@ -566,7 +566,3 @@ body {
 .menu2 :hover ul :hover ul :hover ul :hover ul :hover ul
 {left:160px; top:-1px; background: #fff; padding:0; /* white-space:nowrap; */width:auto; z-index:300; height:auto;}
 .menu2 :hover ul.sub li ul {border-top:1px solid #000; background: #fff; z-index:300;}
-
-
-
-
