- Controllers   * little changes in parameters called in report     pdf method
- Views and partials
  * changes in translations code and positions of links

- Locales
  * added translations in english and spanish locales

- Library
  * changes in parameters necesaries in report pdf method

--- a/app/views/places/_list.html.erb
+++ b/app/views/places/_list.html.erb
@@ -2,7 +2,9 @@
   <%= t('common-actions.show-hide') %></a>
 <div id='right-content' >
   <%= link_to t('common-actions.download'), :controller => 'places',
-  :action => 'xls_places' %>
+  :action => 'xls_places' %> |
+  <%= link_to  t('common-actions.download-pdf'), :controller => 'places',
+  :action => 'pdf' %>
 </div>
 <div id='toggle_appear_table_list_places' >
   <div>
