--- a/app/views/computers/show.html.erb
+++ b/app/views/computers/show.html.erb
@@ -1,3 +1,13 @@
+<!-- Computer info -->
+<%= show_info(t('computers.name'), 'principal-device', 'Computer', @computer.id, 'name') %>
+<%= show_info('Ip', 'data-principal-device', 'Computer', @computer.id, 'ip') %>
+<%= show_info('Mac', 'data-principal-device', 'Computer', @computer.id, 'mac') %>
+
+
+<% 2.times do %>
+<br>
+<% end %>
+
 
 <%= link_to 'Edit', edit_computer_path(@computer) %> |
 <%= link_to 'Back', computers_path %>
