--- a/app/views/workstations/show.html.erb
+++ b/app/views/workstations/show.html.erb
@@ -8,16 +8,19 @@
 
 <%= show_info('Mac', 'data-principal-device', 'Computer', @workstation.computer_id, 'mac') %>
 
+
+<% 2.times do %>
 <br>
-<br>
+<% end %>
 
 <!-- Screen info -->
 <%= show_info(t('workstations.screen'), 'principal-device', 'Screen', @workstation.screen_id, 'model')%>
 
 <%= show_info('Sn', 'data-principal-device', 'Screen', @workstation.screen_id, 'serialnumber') %>
 
+<% 2.times do %>
 <br>
-<br>
+<% end %>
 
 <!-- Printer info -->
 <%= show_info(t('workstations.printer'), 'principal-device', 'Printer', @workstation.printer_id, 'model')  rescue nil %>
@@ -25,8 +28,9 @@
 <%= show_info('Sn', 'data-principal-device', 'Printer', @workstation.printer_id, 'serialnumber')  rescue nil %>
 
 
+<% 2.times do %>
 <br>
-<br>
+<% end %>
 
 <%= link_to 'Edit', edit_workstation_path(@workstation) %> |
 <%= link_to 'Back', workstations_path %>
