--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,7 +2,7 @@
   <%= @name_of_place %>
 </h2>
 
-<div id='left-content' >
+<div id='right-content' >
   <%= link_to t('common-actions.download-all'), :controller => 'places', :action => 'all_hardware', :id => params[:id] %>
 </div>
 
